--- a/wwwroot/index3.html
+++ b/wwwroot/index3.html
@@ -34,7 +34,7 @@
 
 
         <video id='my-video' class='video-js vjs-fluid' preload='none'
-        poster='https://i.imgur.com/OJntPnB.jpg' data-setup='{"techOrder": ["html5", "youtube" ]}'>
+        poster='https://i.imgur.com/dPaIjEW.jpg' data-setup='{"techOrder": ["html5", "youtube" ]}'>
           <source src='MY_VIDEO.mp4' type='video/mp4'>
           <source src='MY_VIDEO.webm' type='video/webm'>
           <p class='vjs-no-js'>
@@ -49,8 +49,8 @@
   
         <script>
             var interval = 10000;
-            var splash_image = 'https://i.imgur.com/OJntPnB.jpg';
-            var pause_image = 'https://imgur.com/8wNfqHV.jpg';
+            var splash_image = 'https://i.imgur.com/dPaIjEW.jpg';
+            var pause_image = 'https://i.imgur.com/aoz9sJn.jpg';
 
             var player = videojs('my-video');
             player.ready(function() {
